--- a/src/scss/variables/_typography.scss
+++ b/src/scss/variables/_typography.scss
@@ -16,3 +16,6 @@ $font-size-h5       : 1em * ($font-scale);
 
 $font-size-sm       : 1em / ($font-scale);
 $font-size-xs       : 1em / ($font-scale * $font-scale);
+
+$font-weight-bold   : 600;
+$font-weight-regular: 400;
