--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -40,8 +40,8 @@ $color-border-dker: $color-shade-7;
 // typography
 
 $color-link       : $color-primary;
-$color-link-hover : darken($color-link, 8%);
-$color-link-active: darken($color-link, 16%);
+$color-link-hover : darken($color-link, $brightness-hover);
+$color-link-active: darken($color-link, $brightness-active);
 
 $color-heading    : #212121;
 $color-body       : #616161;
@@ -54,3 +54,10 @@ $color-icon       : #9e9e9e;
 $color-google     : #4285f4;
 $color-twitter    : #1da1f2;
 $color-facebook   : #3b5998;
+
+// maps
+
+$colors-map       : (
+  'primary': $color-primary,
+  'accent' : $color-accent
+);
