--- a/src/scss/variables/index.scss
+++ b/src/scss/variables/index.scss
@@ -1,6 +1,7 @@
 @import "border";
 @import "brightness";
 @import "colors";
+@import "components";
 @import "icons";
 @import "spacing";
 @import "typography";
