--- a/src/scss/functions/_color.scss
+++ b/src/scss/functions/_color.scss
@@ -7,3 +7,7 @@
 
   @if ($yiq >= 128) { @return $dark; } @else { @return $light; }
 }
+
+@function color-hex-to-rgb($hex) {
+  @return red($hex), green($hex), blue($hex);
+}
