--- a/src/scss/utilities/_icon.scss
+++ b/src/scss/utilities/_icon.scss
@@ -2,26 +2,8 @@
   font-size: var(--icon-size-base);
 }
 
-.icon-xs {
-  font-size: var(--icon-size-xs);
-}
-
-.icon-sm {
-  font-size: var(--icon-size-sm);
-}
-
-.icon-md {
-  font-size: var(--icon-size-md);
-}
-
-.icon-lg {
-  font-size: var(--icon-size-lg);
-}
-
-.icon-xl {
-  font-size: var(--icon-size-xl);
-}
-
-.icon-xxl {
-  font-size: var(--icon-size-xxl);
+@each $name in ('xs', 'sm', 'md', 'lg', 'xl', 'xxl') {
+  .icon-#{$name} {
+    font-size: var(--icon-size-#{$name});
+  }
 }
