--- a/src/scss/components/button/_variables.scss
+++ b/src/scss/components/button/_variables.scss
@@ -1,4 +1,4 @@
-$btn-border-width       : 1px;
+$btn-border-width       : var(--border-width-base);
 $btn-border-radius      : var(--border-radius-base);
 $btn-font-weight        : var(--font-weight-bold);
 
