--- a/src/scss/variables/_brightness.scss
+++ b/src/scss/variables/_brightness.scss
@@ -1,2 +1,8 @@
-$brightness-hover : 12%;
-$brightness-active: 24%;
+$brightness-base: 12%;
+
+$brightness-xs  : 4%;
+$brightness-sm  : 8%;
+$brightness-md  : 16%;
+$brightness-lg  : 20%;
+$brightness-xl  : 24%;
+$brightness-xxl : 32%;
