--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -1,31 +1,38 @@
-// brand
-
-$color-primary       : #7c4dff;
-$color-accent        : #00c853;
-
-// generic
-
 $color-black         : #000;
 $color-white         : #fff;
 
 $color-shade-1       : #fafafa;
-$color-shade-2       : darken($color-shade-1, 4%);
-$color-shade-3       : darken($color-shade-1, 8%);
-$color-shade-4       : darken($color-shade-1, 12%);
-$color-shade-5       : darken($color-shade-1, 16%);
-$color-shade-6       : darken($color-shade-1, 20%);
-$color-shade-7       : darken($color-shade-1, 24%);
-$color-shade-8       : darken($color-shade-1, 28%);
+$color-shade-2       : darken($color-shade-1, $brightness-xs);
+$color-shade-3       : darken($color-shade-1, $brightness-sm);
+$color-shade-4       : darken($color-shade-1, $brightness-base);
+$color-shade-5       : darken($color-shade-1, $brightness-md);
+$color-shade-6       : darken($color-shade-1, $brightness-lg);
+$color-shade-7       : darken($color-shade-1, $brightness-xl);
+$color-shade-8       : darken($color-shade-1, $brightness-xxl);
+
+// style
+
+$color-primary       : #7c4dff;
+$color-primary-yiq   : color-yiq($color-primary);
+
+$color-primary-lt    : lighten($color-primary, $brightness-xs);
+$color-primary-lter  : lighten($color-primary, $brightness-sm);
+
+$color-accent        : #00c853;
+$color-accent-yiq    : color-yiq($color-accent);
+
+$color-accent-lt     : lighten($color-accent, $brightness-xs);
+$color-accent-lter   : lighten($color-accent, $brightness-sm);
 
 // backgrounds
 
 $color-bg            : #212121;
 
-$color-bg-lt         : $color-shade-2;
-$color-bg-lter       : $color-shade-1;
+$color-bg-lt         : lighten($color-bg, $brightness-xs);
+$color-bg-lter       : lighten($color-bg, $brightness-sm);
 
-$color-bg-dk         : $color-shade-4;
-$color-bg-dker       : $color-shade-5;
+$color-bg-dk         : darken($color-bg, $brightness-xs);
+$color-bg-dker       : darken($color-bg, $brightness-sm);
 
 // borders
 
@@ -40,14 +47,14 @@ $color-border-dker   : $color-shade-7;
 // typography
 
 $color-link          : $color-primary;
-$color-link-hover    : darken($color-link, $brightness-hover);
-$color-link-active   : darken($color-link, $brightness-active);
+$color-link-hover    : darken($color-link, $brightness-base);
+$color-link-active   : darken($color-link, $brightness-lg);
 
-$color-heading       : #fff;
-$color-body          : #e0e0e0;
-$color-subtle        : #9e9e9e;
+$color-heading       : color-yiq($color-bg);
+$color-body          : color-yiq($color-bg, lighten($color-heading, 40%), darken($color-heading, 40%));
+$color-subtle        : color-yiq($color-bg, lighten($color-heading, 56%), darken($color-heading, 56%));
 
-$color-icon          : #616161;
+$color-icon          : color-yiq($color-bg, lighten($color-heading, 32%), darken($color-heading, 32%));
 
 // vendor
 
@@ -57,7 +64,4 @@ $color-facebook      : #3b5998;
 
 // maps
 
-$color-styles-map    : (
-  'primary': $color-primary,
-  'accent' : $color-accent
-);
+$color-styles        : ('primary', 'accent');
