added new components

--- a/src/scss/components/button/_sizing.scss
+++ b/src/scss/components/button/_sizing.scss
@@ -21,5 +21,11 @@ $btn-sizing-map: (
     'height'   : $btn-md-height,
     'font-size': $btn-md-font-size,
     'padding'  : $btn-md-padding-y $btn-md-padding-x
+  ),
+
+  'lg': (
+    'height'   : $btn-lg-height,
+    'font-size': $btn-lg-font-size,
+    'padding'  : $btn-lg-padding-y $btn-lg-padding-x
   )
 );
