--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -1,5 +1,11 @@
 @import "layout";
 
+@import "article";
+@import "avatar";
 @import "button";
+@import "form";
+@import "form-control";
+@import "input-group";
+@import "image";
 @import "nav";
 @import "navbar";
