--- a/src/scss/_root.scss
+++ b/src/scss/_root.scss
@@ -28,14 +28,6 @@
   --color-white                : #{$color-white};
   --color-black                : #{$color-black};
 
-  --color-shade-1              : #{$color-shade-1};
-  --color-shade-2              : #{$color-shade-2};
-  --color-shade-3              : #{$color-shade-3};
-  --color-shade-4              : #{$color-shade-4};
-  --color-shade-5              : #{$color-shade-5};
-  --color-shade-6              : #{$color-shade-6};
-  --color-shade-7              : #{$color-shade-7};
-
   --color-bg                   : #{$color-bg};
 
   --color-bg-lt                : #{$color-bg-lt};
@@ -66,15 +58,23 @@
 
   --color-primary              : #{$color-primary};
   --color-primary-lt           : #{$color-primary-lt};
+  --color-primary-dk           : #{$color-primary-dk};
   --color-primary-lter         : #{$color-primary-lter};
+  --color-primary-dker         : #{$color-primary-dker};
   --color-primary-yiq          : #{$color-primary-yiq};
   --color-primary-rgb          : #{color-hex-to-rgb($color-primary)};
 
   --color-accent               : #{$color-accent};
   --color-accent-lt            : #{$color-accent-lt};
+  --color-accent-dk            : #{$color-accent-dk};
   --color-accent-lter          : #{$color-accent-lter};
+  --color-accent-dker          : #{$color-accent-dker};
   --color-accent-yiq           : #{$color-accent-yiq};
   --color-accent-rgb           : #{color-hex-to-rgb($color-accent)};
+
+  --color-google               : #{$color-google};
+  --color-twitter              : #{$color-twitter};
+  --color-facebook             : #{$color-facebook};
 
   // Components
 
@@ -96,7 +96,6 @@
   --component-space-sm         : #{$component-space-sm};
   --component-space-md         : #{$component-space-md};
   --component-space-lg         : #{$component-space-lg};
-
 
   // Icons
 
