--- a/src/scss/layout/_base.scss
+++ b/src/scss/layout/_base.scss
@@ -5,6 +5,7 @@ html {
     background-color: var(--color-bg);
     color           : var(--color-body);
     font-family     : var(--font-family-base);
+    line-height     : var(--body-line-height);
     position        : relative;
   }
 }
