added !default to variables

--- a/src/scss/variables/_brightness.scss
+++ b/src/scss/variables/_brightness.scss
@@ -1,8 +1,8 @@
-$brightness-base: 12%;
+$brightness-base: 12% !default;
 
-$brightness-xs  : 4%;
-$brightness-sm  : 8%;
-$brightness-md  : 16%;
-$brightness-lg  : 20%;
-$brightness-xl  : 24%;
-$brightness-xxl : 32%;
+$brightness-xs  :  4% !default;
+$brightness-sm  :  8% !default;
+$brightness-md  : 16% !default;
+$brightness-lg  : 20% !default;
+$brightness-xl  : 24% !default;
+$brightness-xxl : 32% !default;
