--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -1,61 +1,61 @@
 
-$color-black         : #000;
-$color-white         : #fff;
+$color-black         : #000 !default;
+$color-white         : #fff !default;
 
 // style
 
-$color-primary       : #7c4dff;
-$color-primary-yiq   : color-yiq($color-primary);
+$color-primary       : #7c4dff !default;
+$color-primary-yiq   : color-yiq($color-primary) !default;
 
-$color-primary-lt    : lighten($color-primary, $brightness-xs);
-$color-primary-lter  : lighten($color-primary, $brightness-sm);
+$color-primary-lt    : lighten($color-primary, $brightness-xs) !default;
+$color-primary-lter  : lighten($color-primary, $brightness-sm) !default;
 
-$color-primary-dk    : darken($color-primary, $brightness-xs);
-$color-primary-dker  : darken($color-primary, $brightness-sm);
+$color-primary-dk    : darken($color-primary, $brightness-xs) !default;
+$color-primary-dker  : darken($color-primary, $brightness-sm) !default;
 
-$color-accent        : #00c853;
-$color-accent-yiq    : color-yiq($color-accent);
+$color-accent        : #00c853 !default;
+$color-accent-yiq    : color-yiq($color-accent) !default;
 
-$color-accent-lt     : lighten($color-accent, $brightness-xs);
-$color-accent-lter   : lighten($color-accent, $brightness-sm);
+$color-accent-lt     : lighten($color-accent, $brightness-xs) !default;
+$color-accent-lter   : lighten($color-accent, $brightness-sm) !default;
 
-$color-accent-dk     : darken($color-accent, $brightness-xs);
-$color-accent-dker   : darken($color-accent, $brightness-sm);
+$color-accent-dk     : darken($color-accent, $brightness-xs) !default;
+$color-accent-dker   : darken($color-accent, $brightness-sm) !default;
 
 // backgrounds
 
-$color-bg            : #212121;
+$color-bg            : #212121 !default;
 
-$color-bg-lt         : lighten($color-bg, $brightness-xs);
-$color-bg-lter       : lighten($color-bg, $brightness-sm);
+$color-bg-lt         : lighten($color-bg, $brightness-xs) !default;
+$color-bg-lter       : lighten($color-bg, $brightness-sm) !default;
 
-$color-bg-dk         : darken($color-bg, $brightness-xs);
-$color-bg-dker       : darken($color-bg, $brightness-sm);
+$color-bg-dk         : darken($color-bg, $brightness-xs) !default;
+$color-bg-dker       : darken($color-bg, $brightness-sm) !default;
 
 // borders
 
-$color-border        : #424242;
+$color-border        : #424242 !default;
 
-$color-border-lt     : lighten($color-border, $brightness-xs);;
-$color-border-lter   : lighten($color-border, $brightness-sm);;
+$color-border-lt     : lighten($color-border, $brightness-xs) !default;
+$color-border-lter   : lighten($color-border, $brightness-sm) !default;
 
-$color-border-dk     : darken($color-border, $brightness-xs);
-$color-border-dker   : darken($color-border, $brightness-sm);
+$color-border-dk     : darken($color-border, $brightness-xs) !default;
+$color-border-dker   : darken($color-border, $brightness-sm) !default;
 
 // typography
 
-$color-link          : $color-primary;
-$color-link-hover    : darken($color-link, $brightness-base);
-$color-link-active   : darken($color-link, $brightness-lg);
+$color-link          : $color-primary !default;
+$color-link-hover    : darken($color-link, $brightness-base) !default;
+$color-link-active   : darken($color-link, $brightness-lg) !default;
 
-$color-heading       : color-yiq($color-bg);
-$color-body          : color-yiq($color-bg, lighten($color-heading, 40%), darken($color-heading, 40%));
-$color-subtle        : color-yiq($color-bg, lighten($color-heading, 56%), darken($color-heading, 56%));
+$color-heading       : color-yiq($color-bg) !default;
+$color-body          : color-yiq($color-bg, lighten($color-heading, 40%), darken($color-heading, 40%)) !default;
+$color-subtle        : color-yiq($color-bg, lighten($color-heading, 56%), darken($color-heading, 56%)) !default;
 
-$color-icon          : color-yiq($color-bg, lighten($color-heading, 32%), darken($color-heading, 32%));
+$color-icon          : color-yiq($color-bg, lighten($color-heading, 32%), darken($color-heading, 32%)) !default;
 
 // vendor
 
-$color-google        : #4285f4;
-$color-twitter       : #1da1f2;
-$color-facebook      : #3b5998;
+$color-google        : #4285f4 !default;
+$color-twitter       : #1da1f2 !default;
+$color-facebook      : #3b5998 !default;
