--- a/src/scss/variables/_icons.scss
+++ b/src/scss/variables/_icons.scss
@@ -1,8 +1,8 @@
-$icon-size-base: 16px;
+$icon-size-base: 16px !default;
 
-$icon-size-xs  : 10px;
-$icon-size-sm  : 12px;
-$icon-size-md  : 24px;
-$icon-size-lg  : 32px;
-$icon-size-xl  : 48px;
-$icon-size-xxl : 64px;
+$icon-size-xs  : 10px !default;
+$icon-size-sm  : 12px !default;
+$icon-size-md  : 24px !default;
+$icon-size-lg  : 32px !default;
+$icon-size-xl  : 48px !default;
+$icon-size-xxl : 64px !default;
