--- a/src/scss/variables/_animation.scss
+++ b/src/scss/variables/_animation.scss
@@ -1,4 +1,4 @@
-$transition-duration-base: .4s;
+$transition-duration-base: .4s !default;
 
-$transition-duration-fast: .2s;
-$transition-duration-slow: .8s;
+$transition-duration-fast: .2s !default;
+$transition-duration-slow: .8s !default;
