--- a/src/scss/variables/_breakpoints.scss
+++ b/src/scss/variables/_breakpoints.scss
@@ -1,9 +1,9 @@
-$breakpoint-xs : 0;
-$breakpoint-sm : 576px;
-$breakpoint-md : 768px;
-$breakpoint-lg : 992px;
-$breakpoint-xl : 1200px;
-$breakpoint-xxl: 1400px;
+$breakpoint-xs : 0 !default;
+$breakpoint-sm : 576px !default;
+$breakpoint-md : 768px !default;
+$breakpoint-lg : 992px !default;
+$breakpoint-xl : 1200px !default;
+$breakpoint-xxl: 1400px !default;
 
 $breakpoints-map: (
   xs : $breakpoint-xs,
@@ -12,4 +12,4 @@ $breakpoints-map: (
   lg : $breakpoint-lg,
   xl : $breakpoint-xl,
   xxl: $breakpoint-xxl
-);
+) !default;
