--- a/src/scss/variables/_typography.scss
+++ b/src/scss/variables/_typography.scss
@@ -1,21 +1,21 @@
-$body-line-height   : 1.6;
-$heading-line-height: 1.4;
+$body-line-height   : 1.6 !default;
+$heading-line-height: 1.4 !default;
 
-$font-family-base   : 'Open Sans';
-$font-family-heading: 'Quicksand';
-$font-family-generic: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+$font-family-base   : 'Open Sans' !default;
+$font-family-heading: 'Quicksand' !default;
+$font-family-generic: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' !default;
 
-$font-scale         : 1.333; // Perfect Fourth
-$font-size-base     : 1rem;
+$font-scale         : 1.333 !default; // Perfect Fourth
+$font-size-base     : 1rem !default;
 
-$font-size-h1       : 1em * ($font-scale * $font-scale * $font-scale * $font-scale * $font-scale);
-$font-size-h2       : 1em * ($font-scale * $font-scale * $font-scale * $font-scale);
-$font-size-h3       : 1em * ($font-scale * $font-scale * $font-scale);
-$font-size-h4       : 1em * ($font-scale * $font-scale);
-$font-size-h5       : 1em * ($font-scale);
+$font-size-h1       : 1em * ($font-scale * $font-scale * $font-scale * $font-scale * $font-scale) !default;
+$font-size-h2       : 1em * ($font-scale * $font-scale * $font-scale * $font-scale) !default;
+$font-size-h3       : 1em * ($font-scale * $font-scale * $font-scale) !default;
+$font-size-h4       : 1em * ($font-scale * $font-scale) !default;
+$font-size-h5       : 1em * ($font-scale) !default;
 
-$font-size-sm       : 1em / ($font-scale);
-$font-size-xs       : 1em / ($font-scale * $font-scale);
+$font-size-sm       : 1em / ($font-scale) !default;
+$font-size-xs       : 1em / ($font-scale * $font-scale) !default;
 
-$font-weight-bold   : 600;
-$font-weight-regular: 400;
+$font-weight-bold   : 600 !default;
+$font-weight-regular: 400 !default;
