updated components sizing specs

--- a/src/scss/mixins/_common.scss
+++ b/src/scss/mixins/_common.scss
@@ -23,3 +23,7 @@
   display : $display;
   position: $pos;
 }
+
+@mixin map-props-mixin($props) {
+  @each $name, $value in $props { #{$name}: #{$value}; }
+}
