updated root with size variables

--- a/src/scss/_root.scss
+++ b/src/scss/_root.scss
@@ -83,6 +83,13 @@
   --component-brightness-hover : #{$component-brightness-hover};
   --component-brightness-active: #{$component-brightness-active};
 
+  --component-size-base        : #{$component-size-base};
+
+  --component-size-xs          : #{$component-size-xs};
+  --component-size-sm          : #{$component-size-sm};
+  --component-size-md          : #{$component-size-md};
+  --component-size-lg          : #{$component-size-lg};
+
   --component-space-base       : #{$component-space-base};
 
   --component-space-xs         : #{$component-space-xs};
