--- a/src/scss/components/avatar/_variables.scss
+++ b/src/scss/components/avatar/_variables.scss
@@ -1,1 +1,5 @@
 $avatar-border-radius: var(--border-radius-base);
+$avatar-font-size    : var(--font-size-base);
+$avatar-font-weight  : var(--font-weight-bold);
+$avatar-height       : var(--component-size-base);
+$avatar-width        : var(--component-size-base);
