--- a/src/scss/components/badge/_variables.scss
+++ b/src/scss/components/badge/_variables.scss
@@ -2,4 +2,5 @@ $badge-border-radius: var(--border-radius-base);
 $badge-border-width : var(--border-width-base);
 $badge-font-size    : var(--font-size-base);
 $badge-font-weight  : var(--font-weight-bold);
-$badge-padding      : var(--space-base);
+$badge-padding-x    : var(--space-base);
+$badge-padding-y    : 0;
