--- a/src/scss/variables/_components.scss
+++ b/src/scss/variables/_components.scss
@@ -15,12 +15,12 @@ $component-font-size-lg     : $component-font-size-base !default;
 
 // sizing
 
-$component-sizing-base      : 48px;
+$component-size-base        : 48px;
 
-$component-sizing-xs        : 24px;
-$component-sizing-sm        : 32px;
-$component-sizing-md        : 56px;
-$component-sizing-lg        : 64px;
+$component-size-xs          : 24px;
+$component-size-sm          : 32px;
+$component-size-md          : 56px;
+$component-size-lg          : 64px;
 
 // spacing
 
