updated font size on components

--- a/src/scss/_root.scss
+++ b/src/scss/_root.scss
@@ -83,6 +83,13 @@
   --component-brightness-hover : #{$component-brightness-hover};
   --component-brightness-active: #{$component-brightness-active};
 
+  --component-font-size-base   : #{$component-font-size-base};
+
+  --component-font-size-xs     : #{$component-font-size-xs};
+  --component-font-size-sm     : #{$component-font-size-sm};
+  --component-font-size-md     : #{$component-font-size-md};
+  --component-font-size-lg     : #{$component-font-size-lg};
+
   --component-size-base        : #{$component-size-base};
 
   --component-size-xs          : #{$component-size-xs};
