--- a/src/scss/components/badge/_variables.scss
+++ b/src/scss/components/badge/_variables.scss
@@ -1,6 +1,7 @@
 $badge-border-radius: var(--border-radius-base);
 $badge-border-width : var(--border-width-base);
-$badge-font-size    : var(--font-size-base);
+$badge-font-size    : var(--component-font-size-base);
 $badge-font-weight  : var(--font-weight-bold);
-$badge-padding-x    : var(--space-base);
+$btn-height         : var(--component-size-base);
+$badge-padding-x    : var(--component-space-base);
 $badge-padding-y    : 0;
