--- a/src/scss/components/badge/_base.scss
+++ b/src/scss/components/badge/_base.scss
@@ -6,6 +6,7 @@
   display      : inline-block;
   font-size    : $badge-font-size;
   font-weight  : $badge-font-weight;
+  height       : $badge-height;
   line-height  : 1;
   padding      : $badge-padding-y $badge-padding-x;
   text-align   : center;
