--- a/src/scss/components/button/_base.scss
+++ b/src/scss/components/button/_base.scss
@@ -6,6 +6,7 @@
   display        : inline-block;
   font-size      : $btn-font-size;
   font-weight    : $btn-font-weight;
+  height         : $btn-height;
   line-height    : 1;
   padding        : $btn-padding-y $btn-padding-x;
   text-align     : center;
