added missing badge var

--- a/src/scss/components/badge/_variables.scss
+++ b/src/scss/components/badge/_variables.scss
@@ -2,6 +2,6 @@ $badge-border-radius: var(--border-radius-base);
 $badge-border-width : var(--border-width-base);
 $badge-font-size    : var(--component-font-size-base);
 $badge-font-weight  : var(--font-weight-bold);
-$btn-height         : var(--component-size-base);
+$badge-height       : var(--component-size-base);
 $badge-padding-x    : var(--component-space-base);
 $badge-padding-y    : 0;
